20200304修改背景及css ，上下延伸背景

--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -38,7 +38,7 @@ body {
     margin: 0 auto;
     padding: 0;
     background-image:url('../images/mpbg01.jpg');
-    background-repeat: no-repeat;
+    background-repeat: repeat-x;
     background-position: center top;
     background-color: $contentbgcolor;
 
