--- a/sass/sass/_footer.scss
+++ b/sass/sass/_footer.scss
@@ -6,7 +6,7 @@ footer {
     padding: 1em 0;
     background-image: url('../images/footerbg.jpg');
     background-position: center bottom;
-    background-repeat: no-repeat;
+    background-repeat:repeat-x;
     height: 500px;
     position: relative;
     &:before{
