20200304上傳修改熱門活動區塊css_2

--- a/sass/page/_mp.scss
+++ b/sass/page/_mp.scss
@@ -283,6 +283,8 @@
             z-index: 2;
         }
         .activity_block {
+            margin-bottom: 0;
+           
             a {
                 display: block;
                 background-color: #fff;
