--- a/sass/sass/_print.scss
+++ b/sass/sass/_print.scss
@@ -2,7 +2,6 @@
     %no-bg {
         background: none;
     }
-
     /* -------------------------------不需要列印的區塊，請放置於這----//*/
     header,
     .fatfooter,
@@ -11,7 +10,6 @@
     .submenu {
         display: none;
     }
-
     /* -------------------------------各別顯示設定----//*/
     body {
         background: transparent;
@@ -33,6 +31,9 @@
     .innerpage {
         margin-top: 0 !important;
     }
+    .Headline_block, .function{
+        display: none;
+    }
     .main,
     .content {
         @include gutter(0);
@@ -44,7 +45,9 @@
         @include clearfix;
         @extend %no-bg;
         padding-top: 0px !important;
-
+        padding: 0;
+        background-color: #fff;
+        background-image: none;
         img {
             &.float_left {
                 float: right;
@@ -89,7 +92,6 @@
             content: "» ";
         }
     }
-
     /* 檔案下載*/
     .file_download {
         a {
@@ -126,17 +128,14 @@
         page-break-inside: avoid;
         overflow: hidden;
         height: 6cm;
-
         .cp_slider {
             text-align: center;
-
             .slick-slide {
                 width: 30%;
                 height: 4cm;
                 display: inline-block;
                 background: #DEDEDE;
                 position: relative;
-
                 &:before {
                     content: "";
                     position: absolute;
