--- a/sass/page/_mp.scss
+++ b/sass/page/_mp.scss
@@ -76,7 +76,7 @@
     line-height: 1em;
     position: relative;
     display: inline-block;
-    text-shadow: 0px 0px 2px rgba(0,0,0,0.9);
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.9);
     transition: .5s;
     @include screen('notebook') {
         margin-left: 30px;
@@ -284,7 +284,6 @@
         }
         .activity_block {
             margin-bottom: 0;
-           
             a {
                 display: block;
                 background-color: #fff;
@@ -305,7 +304,7 @@
                 position: relative;
                 overflow: hidden;
                 text-align: center;
-                // height: 180px;
+                height: 180px;
                 div {
                     position: absolute;
                     top: 100%;
@@ -325,9 +324,15 @@
                     }
                 }
                 img {
-                    max-width:100%;
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
+                    max-width: 100%;
                     max-height: 180px;
-                    margin:0 auto;
+                    margin: auto;
+                    display: block;
                 }
             }
             h3 {
