--- a/sass/sass/_header.scss
+++ b/sass/sass/_header.scss
@@ -188,11 +188,11 @@
                     letter-spacing: 0;
                     font-size: 0.875em;
                     position: relative;
-                    padding-left: 20px;
+                    padding-left: 10px;
                     &:before {
                         content: '-';
                         position: absolute;
-                        left: 3px;
+                        left: 0;
                         top: 0;
                         width: 10px;
                         height: 10px;
