--- a/sass/page/_mp.scss
+++ b/sass/page/_mp.scss
@@ -67,8 +67,8 @@
 }
 .headline {
     // font-family: Century Gothic;
-    font-family: 'Merriweather', serif;
-    font-weight: 400;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 800;
     color: #fff;
     margin-top: 150px;
     margin-left: 0px;
@@ -133,7 +133,8 @@
             width: 174px;
             height: 172px;
             font-size: 1.5em;
-            font-family: 'Noto Serif TC', serif;
+           font-family: 'Noto Sans TC', sans-serif;
+            font-weight: 500;
             text-align: center;
             line-height: 1em;
             margin: 0;
@@ -141,14 +142,14 @@
             padding-top: 40px;
             span {
                 font-size: 0.75em;
-                font-family: 'Merriweather', serif;
-                font-weight: 700;
+                 font-family: 'Open Sans', sans-serif;
+                font-weight: 600;
                 display: block;
                 margin-top: 10px;
             }
             @include screen('mobile') {
                 background-image: none;
-                margin: 0 auto;
+                margin: 0 auto 20px;
                 width: auto;
                 height: auto;
                 span {
@@ -251,15 +252,16 @@
             margin: 0 auto 20px;
             position: relative;
             font-size: 2em;
-            font-family: 'Noto Serif TC', serif;
+            font-family: 'Noto Sans TC', sans-serif;
+            font-weight: 500;
             text-align: center;
             line-height: 1em;
             width: 300px;
             z-index: 2;
             span {
-                font-size: 0.75em;
-                font-family: 'Merriweather', serif;
-                font-weight: 700;
+                font-size: 0.688em;
+                 font-family: 'Open Sans', sans-serif;
+                font-weight: 600;
                 display: block;
                 margin-top: 10px;
             }
@@ -289,12 +291,11 @@
                 background-color: #fff;
                 box-shadow: 0 0 3px rgba(102, 102, 102, .5);
                 overflow: hidden;
+                position: relative;
+                // outline: 1px solid red;
                 &:hover {
-                    .image {
-                        div {
-                            top: 0;
-                        }
-                    }
+                   transform: translateY(-10px);
+                   box-shadow: 0 10px 20px -10px rgba(0, 0, 0, 0.5)
                 }
                 &:focus {
                     box-shadow: 0 0px 0px 3px $color-yellow;
@@ -305,41 +306,44 @@
                 overflow: hidden;
                 text-align: center;
                 height: 180px;
-                div {
-                    position: absolute;
-                    top: 100%;
-                    left: 0;
-                    bottom: 0;
-                    right: 0;
-                    background-color: rgba(0, 0, 0, .4);
-                    width: 100%;
-                    height: 100%;
-                    color: #fff;
-                    text-align: center;
-                    transition: .8s;
-                    z-index: 5;
-                    span {
-                        padding: 15px;
-                        text-align: left;
-                        display: block;
-                    }
-                }
+                border-bottom: 1px solid #eee;
+                // div {
+                //     position: absolute;
+                //     top: 100%;
+                //     left: 0;
+                //     bottom: 0;
+                //     right: 0;
+                //     background-color: rgba(0, 0, 0, .4);
+                //     width: 100%;
+                //     height: 100%;
+                //     color: #fff;
+                //     text-align: center;
+                //     transition: .8s;
+                //     z-index: 5;
+                //     display: none;
+                //     span {
+                //         padding: 15px;
+                //         text-align: left;
+                //         display: block;
+                //     }
+                // }
                 img {
                     position: absolute;
                     top: 0;
                     right: 0;
                     bottom: 0;
                     left: 0;
-                    max-width: 100%;
-                    max-height: 180px;
+                    width: 100%;
+                    height: 100%;
                     margin: auto;
                     display: block;
                     z-index: 4;
+                    object-fit: cover;
                 }
             }
             h3 {
-                background-color: #6bb937;
-                color: #fff;
+                background-color: rgba(255, 255, 255, .8);
+                color: #000;
                 padding: 7px 15px 5px;
                 margin: 0;
                 font-size: 1.125em;
@@ -352,21 +356,25 @@
                 -webkit-line-clamp: 2;
                 -webkit-box-orient: vertical;
                 letter-spacing: .02em;
+                position: absolute;
+                top: 1em;
+                z-index: 9;
+                width: 100%;
                 @include box-sizing;
+
             }
             .content {
                 padding: 15px;
                 p {
-                    margin: 0 0 10px;
+                    margin:0;
                     padding: 0;
                     color: #333;
-                    height: 50px;
+                    height: 25px;
                     overflow: hidden;
                     text-overflow: ellipsis;
+                    white-space: nowrap;
                     line-height: 1.7em;
-                    display: -webkit-box;
-                    -webkit-line-clamp: 2;
-                    -webkit-box-orient: vertical;
+                    
                 }
                 .time {
                     color: #2a907c;
@@ -377,10 +385,10 @@
                     text-overflow: ellipsis;
                     white-space: nowrap;
                     padding: 3px 0;
-                    color:#333;
+                    color:#706e5d;
                     font-size: 1.25em;
                     font-weight: 700;
-                   
+                    margin-bottom: 10px;
                     span {
                         background-color: #969482;
                         padding: 3px 5px;
@@ -389,6 +397,7 @@
                         margin-right: 4px;
                         font-size: .75em;
                          font-weight:normal;
+                         display: inline-block;
                     }
                     em {
                         font-style: normal;
@@ -410,15 +419,16 @@
             margin: 0 auto 20px;
             position: relative;
             font-size: 2em;
-            font-family: 'Noto Serif TC', serif;
+           font-family: 'Noto Sans TC', sans-serif;
+            font-weight: 500;
             text-align: center;
             line-height: 1em;
             width: 300px;
             z-index: 2;
             span {
-                font-size: 0.75em;
-                font-family: 'Merriweather', serif;
-                font-weight: 700;
+                 font-size: 0.688em;
+               font-family: 'Open Sans', sans-serif;
+                font-weight: 600;
                 display: block;
                 margin-top: 10px;
             }
