--- a/sass/page/_lp.scss
+++ b/sass/page/_lp.scss
@@ -28,7 +28,7 @@
             border-top: 5px solid $secondaryColor;
             &>li {
                 padding: 1em 0;
-                border-bottom: 1px solid #ccc;
+                border-bottom: 1px solid #999   ;
                 position: relative;
                 &:hover {
                     background-color: #fff6d2;
