--- a/sass/sass/_form.scss
+++ b/sass/sass/_form.scss
@@ -29,7 +29,7 @@ select::-ms-expand {
         margin:0;
         display: flex;
         align-items: stretch;
-        @include screen('mobile'){
+        @include screen('xs_mobile'){
             display: block;
         }
         // 閱讀條文
@@ -55,8 +55,9 @@ select::-ms-expand {
         padding:15px;
         margin:0;
         @include box-sizing;
-        @include screen('mobile') {
+        @include screen('xs_mobile') {
              display: block;
+             width: 100%;
         }
     }
     .form_content {
@@ -68,8 +69,9 @@ select::-ms-expand {
         margin:0;
         @include box-sizing;
         overflow: hidden;
-        @include screen('mobile') {
+        @include screen('xs_mobile') {
              display: block;
+             width: 100%;
         }
         // 第二層的設定
         .form_grp {
