--- a/sass/sass/_table.scss
+++ b/sass/sass/_table.scss
@@ -138,8 +138,7 @@ table {
                 text-align: left;
                 // color: $secondaryColor;
                 font-size: .938em;
-                font-weight: 600;
-                // padding-left: 12px;
+                font-weight: bold;
                 position: absolute;
                 top:0;
                 left:0;
