--- a/sass/page/_sp.scss
+++ b/sass/page/_sp.scss
@@ -228,7 +228,7 @@
             right: 5px;
             text-align: right;
             color: #7a7a7a;
-            font-size: .938em;
+            font-size: 1.063em;
             font-weight: bolder;
             @include screen('xs_mobile') {
                 position: absolute;
